--- a/src/input.css
+++ b/src/input.css
@@ -10,7 +10,11 @@
 }
 
 .container {
-  @apply max-w-6xl mx-auto px-6;
+  @apply max-w-6xl mx-auto px-0 md:px-6;
+}
+
+.no-inline-padding {
+  inline-padding: 0 !important;
 }
 
 .center {
@@ -21,6 +25,8 @@
   @apply h-[3px] w-full bg-gray-600 rounded-sm;
 }
 
+/* PRODUCT DETAILS */
+
 .item {
   @apply w-1/4 h-auto rounded-lg;
 }
@@ -29,9 +35,16 @@
   @apply border-2 border-solid border-primary-400;
 }
 
-.product {
-  grid-column: 2 / 3;
-  grid-row: 1 / 3;
+.product-photos {
+  flex: 0 0 auto;
+  width: 33.333333%;
+  /*@apply flex flex-col justify-center gap-4; */
+}
+
+.product-details {
+  flex: 0 0 auto;
+  width: 66.666667%;
+  @apply flex flex-col justify-center gap-4;
 }
 
 .qty-btn {
@@ -39,5 +52,5 @@
 }
 
 .cart-btn {
-  @apply w-3/4 bg-primary-400 p-2 text-xs font-accent font-bold uppercase text-white rounded-lg flex center gap-2 transition-all hover:bg-primary-500;
+  @apply w-full md:w-3/4 bg-primary-400 p-2 text-xs font-accent font-bold uppercase text-white rounded-lg flex center gap-2 transition-all hover:bg-primary-500;
 }
