--- a/src/input.css
+++ b/src/input.css
@@ -28,7 +28,7 @@
 /* PRODUCT DETAILS */
 
 .item {
-  @apply w-1/4 h-auto rounded-lg;
+  @apply w-1/4 h-auto rounded-lg cursor-pointer;
 }
 
 .active-item {
@@ -53,4 +53,35 @@
 
 .cart-btn {
   @apply w-full md:w-3/4 bg-primary-400 p-2 text-xs font-accent font-bold uppercase text-white rounded-lg flex center gap-2 transition-all hover:bg-primary-500;
+}
+
+.image-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
+.btn-left {
+  @apply w-12 h-12 rounded-full bg-white absolute top-1/2 -left-5 flex center -translate-y-1/2;
+}
+
+.btn-right {
+  @apply w-12 h-12 rounded-full bg-white absolute top-1/2 -right-5 flex center -translate-y-1/2;
+}
+
+.modal-image {
+  animation: fadeIn 0.8s linear;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
